--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Your Page Title</title>
+    <title>Kate</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+    <h1>hi</h1>
+    <h1>The Title of Kate's Website </h1>
+    <p>this is the first paragraph. It is very short. I like popcorn.</p>
+    <p>this is the second paragraph. It is also very short. I like pasta.</p>
+    <p> this is another paragraph. I like ice cream.</p>
+    <p> THIS IS THE LAST PARAGRAPH. I like chocolate. </p>
   </body>
 </html>
